Wed Jul 30 05:43:59 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/bb2weight.cc: Optimise BB2Weight and
	  fix incorrect upper bound in some cases.

Tue Jul 29 07:20:57 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_version.cc: Remove assertion that table sizes
	  are all the same, and redundant assertion that the unserialised
	  blocksize is >= 2048.  Fixes set-but-not-used warning in
	  non-assertion build.

Mon Jul 28 06:35:45 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc,
	  backends/brass/brass_databasereplicator.h,
	  backends/brass/brass_table.cc: Replace enum table_id with enum
	  Brass::table_type.

Mon Jul 28 04:28:12 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Note the freelist implementation fixed #40.

Mon Jul 28 04:26:07 GMT 2014  Olly Betts <olly@survex.com>

	* api/compactor.cc,backends/brass/,backends/dbcheck.cc,
	  tests/api_wrdb.cc: Eliminate the base files, and instead store the
	  root block and freelist pointers in the "iambrass" file.

Mon Jul 28 03:22:22 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc: Remove variable which is
	  set but never used.

Sun Jul 27 01:56:58 GMT 2014  Olly Betts <olly@survex.com>

	* backends/dbcheck.cc: Don't try to write output when no output stream
	  is specified in the case where the database open fails and so we
	  can't check changes files.

Thu Jul 24 21:12:23 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Jul 11 10:44:48 GMT 2014  Olly Betts <olly@survex.com>

	* weight/bm25weight.cc: Improve BM25 upper bound in the case when our
	  wdf upper bound > our document length lower bound.  Thanks to
	  Craig Macdonald for pointing out this trick.

Thu Jul 10 13:29:50 GMT 2014  Olly Betts <olly@survex.com>

	* weight/bm25weight.cc: Pre-multiply termweight by (param_k1 + 1).

Sat Jun 28 11:00:49 GMT 2014  Olly Betts <olly@survex.com>
