@@ -1,3 +1,7 @@
+Wed Jul 30 05:47:31 GMT 2014  Olly Betts <olly@survex.com>
+
+	* weight/bb2weight.cc: Whitespace cleanup.
+
 Wed Jul 30 05:43:59 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>
 
 	* include/xapian/weight.h,weight/bb2weight.cc: Optimise BB2Weight and
